--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "apisauce": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
@@ -26,6 +27,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@testing-library/react-native": "^7.2.0",
+    "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^26.6.3",
     "eslint": "7.14.0",
     "jest": "^26.6.3",
