--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -16,11 +16,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/native": "^5.9.4",
+    "add": "^2.0.6",
     "apisauce": "^2.1.1",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "rn-placeholder": "^3.0.3"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.4.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "rn-placeholder": "^3.0.3",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -35,6 +45,9 @@
     "react-test-renderer": "17.0.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|react-native-code-push|react-native-snap-carousel)/)"
+    ]
   }
 }
